[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "dense-armor"
version = "1.0.9"
description = "The wearable Sentinel shield: two-stage adaptive anomaly damping (IIR + ABCollatz gating) for any AI signal - NaN-safe, drift-aware, dimension-agnostic"
readme = "README.md"
license = "BUSL-1.1"
license-files = ["LICENSE.md"]
authors = [{ name = "Salvatore Pennacchio", email = "jtatopenn@libero.it" }]
requires-python = ">=3.10"
keywords = ["anomaly-detection", "signal-processing", "drift-detection", "ai-safety", "robust-statistics", "jax"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "jax", "psutil"]

[project.optional-dependencies]
audio = ["scipy"]
data = ["h5py", "netCDF4"]
quantum = ["dense-evolution"]
dev = ["pytest", "filterpy", "matplotlib"]

[project.urls]
Homepage = "https://github.com/tatopenn-cell/Dense-Armor"
Repository = "https://github.com/tatopenn-cell/Dense-Armor"
"Sister project (Dense-Evolution)" = "https://github.com/tatopenn-cell/Dense-Evolution"

[project.scripts]
dense-armor = "dense_armor.armatura:main"

[tool.setuptools.packages.find]
include = ["dense_armor*"]
